--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,16 +1,38 @@
 @import "tailwindcss";
 
-* {
-  padding: 0;
-  margin: 0;
+{
   box-sizing: border-box;
 }
 
-body {
+/* body {
   font-family: "Righteous-Regular";
+  font-weight: 100;
+} */
+
+html {
+  line-height: 1.5;
+  -webkit-text-size-adjust: 100%;
+  font-family:
+    Open Sans,
+    ui-sans-serif,
+    system-ui,
+    sans-serif,
+    Apple Color Emoji,
+    Segoe UI Emoji,
+    Segoe UI Symbol,
+    Noto Color Emoji;
+  font-feature-settings: normal;
+  font-variation-settings: normal;
+  -moz-tab-size: 4;
+  tab-size: 4;
+  -webkit-tap-highlight-color: transparent;
 }
 
 @font-face {
   font-family: "Righteous-Regular";
   src: url("./fonts/Righteous-Regular.woff");
+}
+
+@theme{
+  --font-Righteous: "Righteous-Regular";
 }
